cabal-version:  2.4

name:           kitty-cat-categories-extensions-test
version:        0.1
description:    Plugin using Kmett's Categories classes.
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

common options
  ghc-options:
    -- make it possible to inline almost anything
    -fexpose-all-unfoldings
    -- ensure unfoldings are available
    -fno-omit-interface-pragmas
    -Wall

library
  exposed-modules:
      Kitty.Plugin.Test.Categories.Instances
  build-depends:
    , base
    , categories
    , kitty-cat-plugin-test
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

test-suite categories-hierarchy
  import: options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Categories/Main.hs
  ghc-options:
    -fplugin Kitty.Plugin
    -fplugin-opt Kitty.Plugin:hierarchy:Kitty.Plugin.Hierarchy.Categories.hierarchy
    -O0
  build-depends:
    , adjunctions
    , base
    , categories
    , either
    , ghc-prim
    , hedgehog
    , kitty-cat-categories-extensions
    , kitty-cat-categories-extensions-test
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-hedgehog
    , kitty-cat-plugin
    , kitty-cat-plugin-test
    , template-haskell

test-suite categories-hierarchy-optimized
  import: options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Categories/Main.hs
  ghc-options:
    -fplugin Kitty.Plugin
    -fplugin-opt Kitty.Plugin:hierarchy:Kitty.Plugin.Hierarchy.Categories.hierarchy
    -O2
    -fignore-interface-pragmas
  build-depends:
    , adjunctions
    , base
    , categories
    , either
    , ghc-prim
    , hedgehog
    , kitty-cat-categories-extensions
    , kitty-cat-categories-extensions-test
    , kitty-cat-category
    , kitty-cat-client
    , kitty-cat-hedgehog
    , kitty-cat-plugin
    , kitty-cat-plugin-test
    , template-haskell
