cabal-version:  2.4

name:           kitty-cat-categories-extensions
version:        0.1
description:    Extensions to use Kmett's Categories with the plugin.
homepage:       https://github.com/con-kitty/kitty-cat#readme
bug-reports:    https://github.com/con-kitty/kitty-cat/issues
build-type:     Simple
tested-with:    GHC==8.10.2

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat

library
  exposed-modules:
      Kitty.Plugin.Hierarchy.Categories
  other-modules:
      Paths_kitty_cat_categories_extensions
  autogen-modules:
      Paths_kitty_cat_categories_extensions
  ghc-options: -Wall
  build-depends:
    , base
    , bytestring
    , ghc
    , ghc-prim
    , kitty-cat-duoids
    , kitty-cat-plugin
    , transformers
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
