cabal-version:  2.4

name:           categorifier-categories-integration-test
version:        0.1
description:    Plugin using Kmett's Categories classes.
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2, GHC==9.2.8

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

common defaults
  ghc-options:
    -Wall
  build-depends:
    , base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0
    , categories ^>=1.0.7
    , categorifier-plugin-test
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    InstanceSigs
    LambdaCase
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators

library
  import: defaults
  exposed-modules:
      Categorifier.Test.Categories.Instances

common hierarchy-tests
  import: defaults
  hs-source-dirs: test
  ghc-options:
    -fplugin Categorifier
    -- -fplugin-opt Categorifier:defer-failures
    -fplugin-opt Categorifier:hierarchy:Categorifier.Hierarchy.Categories.hierarchy
  build-depends:
    , adjunctions ^>=4.4
    , categories ^>=1.0.7
    , categorifier-categories-integration
    , categorifier-categories-integration-test
    , categorifier-category
    , categorifier-client
    , categorifier-hedgehog
    , categorifier-plugin
    , categorifier-plugin-test
    , either ^>=5.0.1
    , ghc-prim ^>=0.5.3 || ^>=0.6.0 || ^>=0.7.0 || ^>=0.8.0
    , hedgehog ^>=1.0.3 || ^>=1.1 || ^>=1.2
    , template-haskell ^>=2.15.0 || ^>=2.16.0 || ^>=2.17.0 || ^>=2.18.0

test-suite categories-hierarchy
  import: hierarchy-tests
  type: exitcode-stdio-1.0
  main-is: Categories/Main.hs
  ghc-options:
    -O0

test-suite categories-hierarchy-optimized
  import: hierarchy-tests
  type: exitcode-stdio-1.0
  main-is: Categories/Main.hs
  ghc-options:
    -O2
