cabal-version:  2.4

name:           categorifier-categories-integration
version:        0.1
description:    Extensions to use Kmett's Categories with the plugin.
homepage:       https://github.com/con-kitty/categorifier#readme
bug-reports:    https://github.com/con-kitty/categorifier/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.7, GHC==9.0.1, GHC==9.2.1, GHC==9.2.2, GHC==9.2.8

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier

common defaults
  ghc-options:
    -Wall
  build-depends:
    , base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    InstanceSigs
    LambdaCase
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators

library
  import: defaults
  exposed-modules:
      Categorifier.Hierarchy.Categories
  other-modules:
      Paths_categorifier_categories_integration
  autogen-modules:
      Paths_categorifier_categories_integration
  build-depends:
    , bytestring ^>=0.10.9 || ^>=0.11.0
    , categories ^>=1.0.7
    , categorifier-duoids
    , categorifier-ghc
    , categorifier-plugin
    , ghc-prim ^>=0.5.3 || ^>=0.6.0 || ^>=0.7.0 || ^>=0.8.0
    , transformers ^>=0.5.6 || ^>=0.6.0
